<resources>
    <string name="app_name">It-item</string>

    <!-- interest -->
    <string name="interest_wanna_know">님을 알고 싶어요!</string>
    <string name="interest_select_ctg">관심 항목을 선택하면\n쇼핑리스트를 추천해드립니다</string>

    <!-- main -->
    <string name="main_action_title">이거사조</string>
    <string name="main_action_title">이거사 !</string>
    <string name="main_search_city">도시 검색</string>
    <string name="main_welcome">성민님\n어떤 기념품을 찾으시나요?</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_test">testActivity</string>
</resources>
