<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/ml_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/activity_main_scene01">


        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:fillViewport="true"
            android:background="@color/colorDeepWhite">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/v_bg"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:background="@color/colorMain"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Space
                    android:id="@+id/space_header"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/main_action_title"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="@id/space_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/space_header" />

                <ImageView
                    android:id="@+id/iv_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/middle_margin"
                    android:src="@drawable/ic_menu_black_24dp"
                    app:layout_constraintBottom_toBottomOf="@id/space_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/space_header" />

                <TextView
                    android:id="@+id/tv_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/space_header"
                    tools:text="@string/main_welcome" />

                <View
                    android:id="@+id/v_left"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:background="@drawable/all_rounded_square"
                    android:backgroundTint="@color/colorFaintMain"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_welcome"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.6" />

                <View
                    android:id="@+id/v_right"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/all_rounded_square"
                    app:layout_constraintBottom_toBottomOf="@id/v_left"
                    app:layout_constraintStart_toStartOf="@id/v_left"
                    app:layout_constraintTop_toTopOf="@id/v_left"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.34" />

                <View
                    android:id="@+id/v_left2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/colorDeepMain"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toStartOf="@id/v_right2"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/v_left"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.35" />

                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_search_black_24dp"
                    app:layout_constraintBottom_toTopOf="@id/tv_search"
                    app:layout_constraintEnd_toEndOf="@id/v_left2"
                    app:layout_constraintStart_toStartOf="@id/v_left2"
                    app:layout_constraintTop_toTopOf="@id/v_left2" />

                <TextView
                    android:id="@+id/tv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/main_search_city"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="@id/v_left2"
                    app:layout_constraintEnd_toEndOf="@id/v_left2"
                    app:layout_constraintStart_toStartOf="@id/v_left2"
                    app:layout_constraintTop_toBottomOf="@id/iv_search" />

                <View
                    android:id="@+id/v_right2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/middle_margin"
                    android:background="@drawable/circle"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/v_left2"
                    app:layout_constraintTop_toBottomOf="@id/v_left"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.35" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/v_left2"
                    app:layout_constraintWidth_percent="0.8" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>


        <View
            android:id="@+id/v_header"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorWhite"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_action_title"
            android:textColor="@color/colorBlack"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/v_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_header" />

        <ImageView
            android:id="@+id/iv_header_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/middle_margin"
            android:background="@drawable/ic_menu_black_24dp"
            android:backgroundTint="@color/colorBlack"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/v_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_header" />


        <ImageView
            android:id="@+id/iv_header_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/middle_margin"
            android:background="@drawable/ic_search_black_24dp"
            android:backgroundTint="@color/colorBlack"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/v_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/v_header" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>